# templates

./: .gitignore  CMakeLists.txt  README.md
grpc-swift-template/: Package.swift  README.md
grpc-swift-template/Sources/svc/: greeter.swift  service.swift
include/: BridgingHeader.h
kn-svc-template/: README.md  ns.yaml  secret.yaml  source.yaml
kube-deploy-template/component/: kustomization.yaml
kube-deploy-template/component/cloudvisor/: kustomization.yaml
kube-deploy-template/component/cruiser/: kustomization.yaml
kube-deploy-template/component/cruiser/knative/: kustomization.yaml  server.yaml
kube-deploy-template/component/harbor/monitoring/: kustomization.yaml
kube-deploy-template/component/monitoring/loki/: kustomization.yaml  loki.yaml
kube-deploy-template/component/monitoring/tempo/: tempo.yaml
kube-deploy-template/crd/: kustomization.yaml
kube-deploy-template/resource/addon/cicd/: kustomization.yaml  source.yaml
kube-deploy-template/resource/addon/sre/loki/: release.yaml
kube-deploy-template/resource/addon/sre/tempo/: kustomization.yaml
kube-deploy-template/resource/addon/ucp/: kustomization.yaml
kube-deploy-template/resource/addon/ucp/maas/: kustomization.yaml  maas.yaml  release.yaml
kube-deploy-template/resource/addon/ucp/powerdns/: powerdns.yaml  release.yaml
kube-deploy-template/resource/core/: namespace.yaml
kube-deploy-template/resource/core/certmanager/: kustomization.yaml
kube-deploy-template/resource/core/cni/: kustomization.yaml
kube-deploy-template/resource/core/cni/resource/: config.yaml  resource.yaml
kube-deploy-template/resource/core/csi/cinder/: kustomization.yaml
kube-deploy-template/resource/core/csi/openebs/: csi.yaml
kube-deploy-template/resource/core/csi/vsphere/: kustomization.yaml
kube-deploy-template/resource/core/gateway/: gateway.yaml  kustomization.yaml
kube-deploy-template/resource/core/knative/: operator.yaml
kube-deploy-template/resource/core/knative/eventing/: event.yaml
kube-deploy-template/resource/core/knative/serving/: server.yaml
kube-deploy-template/site/aio/: knativeserver.yaml  kustomization.yaml
kube-deploy-template/site/aio/network/: cni-resource.yaml  cni.yaml  kustomization.yaml
kubernetes/kn-svc-template/: config.yaml  svc.yaml  trigger.yaml
kubernetes/kube-deploy-template/: README.md  kustomization.yaml
kubernetes/kube-deploy-template/cluster/: dev-docker.yaml  dev-openstack.yaml  dev-remote.yaml  dev-vsphere.yaml  kustomization.yaml
kubernetes/kube-deploy-template/component/: clusterissuer.yaml
kubernetes/kube-deploy-template/component/cruiser/knative/: gateway.yaml  server.yaml
kubernetes/kube-deploy-template/component/harbor/codecloud/: kustomization.yaml
kubernetes/kube-deploy-template/crd/: kustomization.yaml
kubernetes/kube-deploy-template/kcm/: accessmanagement.yaml  cni.yaml  csi.yaml  kcm.yaml  kustomization.yaml
kubernetes/kube-deploy-template/mcs/: cni.yaml  csi.yaml  global.yaml  kustomization.yaml
kubernetes/kube-deploy-template/mcs/mgmt/: kustomization.yaml  mcs.yaml
kubernetes/kube-deploy-template/mcs/profile/cruiser/: kustomization.yaml
kubernetes/kube-deploy-template/resource/addon/cicd/: flux.yaml  source.yaml
kubernetes/kube-deploy-template/resource/addon/sre/: kustomization.yaml  monitoring.yaml
kubernetes/kube-deploy-template/resource/addon/ucp/: mariadb.yaml  namespace.yaml  postgresql.yaml
kubernetes/kube-deploy-template/resource/core/: kustomization.yaml  metrics.yaml  namespace.yaml
kubernetes/kube-deploy-template/resource/core/certmanager/: certmanager.yaml  clusterissuer.yaml  kustomization.yaml  trustmanager.yaml  webhook.yaml
kubernetes/kube-deploy-template/resource/core/cni/: cni.yaml
kubernetes/kube-deploy-template/resource/core/gateway/: gateway.yaml  grpc.yaml  kustomization.yaml
kubernetes/kube-deploy-template/resource/core/knative/: kustomization.yaml  operator.yaml
kubernetes/kube-deploy-template/site/aio/: knativeserver.yaml  kustomization.yaml
kubernetes/kube-deploy-template/site/aio/network/: cni-resource.yaml  cni.yaml  kustomization.yaml
kubernetes/kube-deploy-template/template/: addon.yaml  core.yaml  crd.yaml  kustomization.yaml
kubernetes/kube-deploy-template/template/cluster/: kustomization.yaml
kubernetes/kube-deploy-template/template/service/: cm.yaml  cni.yaml  crd.yaml  csi.yaml  kustomization.yaml
kubernetes/kube-deploy-template/template/source/: bitnami.yaml  kustomization.yaml  labsonline.yaml
linux/dev-vm-template/: Makefile  README.md
linux/dev-vm-template/cloudinit/: meta-data  user-data
linux/dev-vm-template/scripts/: build.sh
linux/yocto-linux-template/: README.md
lkm-rust-template/: Makefile  README.md
rust/lkm-rust-template/: hello.rs
src/: Main.swift  Stubs.c  Time.swift
swift/grpc-swift-template/: Package.resolved  Package.swift
swift/grpc-swift-template/Sources/Client/: Greet.swift
swift/grpc-swift-template/Sources/server/: GreeterService.swift  greeter.swift
swift/http-swift-template/: Package.resolved  Package.swift  README.md
swift/http-swift-template/Sources/: entrypoint.swift
swift/web-swift-template/: Package.resolved  Package.swift  README.md
swift/web-swift-template/Content/: README.md
swift/web-swift-template/Sources/: Entrypoint.swift  Web.swift
swift/web-swift-template/Sources/Components/: NavBar.swift  SocialFooter.swift  VersionInfo.swift
swift/web-swift-template/Sources/Configuration/: Robots.swift
swift/web-swift-template/Sources/Layouts/: CustomeArticleLayout.swift  DefaultLayout.swift
swift/web-swift-template/Sources/Pages/: Home.swift  Tags.swift
swift/zephyr-swift-template/: README.md  example.env
swift/zephyr-swift-template/include/: BridgingHeader.h
swift/zephyr-swift-template/lib/: Time.swift
swift/zephyr-swift-template/scripts/: loadenv.sh
swift/zephyr-swift-template/src/: Entrypoint.swift  Main.swift  Stubs.c
zephyr-swift-template/: CMakeLists.txt  README.md  example.env  prj.conf
zephyr-swift-template/scripts/: loadenv.sh
zephyr-swift-template/src/: Main.swift  Stubs.c  Time.swift
(+29 files in other folders)
